V 0.99 DESKTOP. Added activity Section, fixed bad ratios, aligned what needed to be aligned, fixed font size and weight. Still need minor ajustments regarding W3C standards compliance (mainly alt to add to images, and H1/H6 warnings to address

--- a/css/styles.css
+++ b/css/styles.css
@@ -33,12 +33,9 @@ html {
   margin-right: 2em;
 }
 
-.top_nav_menu a:hover {
-  border-top: 1px solid #0065fc;
-}
-
+.top_nav_menu a:hover,
 .top_nav_menu a:active {
-  color: #08fc00;
+  border-top: 1px solid #0065fc;
 }
 
 /*Search Input Elements*/
@@ -164,7 +161,7 @@ html {
 
 .main_search_result {
   background-color: #f2f2f2;
-  border-radius: 2vw;
+  border-radius: 1vw;
   flex: 2;
   margin-right: 2em;
   display: flex;
@@ -175,15 +172,15 @@ html {
 
 .search_result_label {
   width: 100%;
-  font-size: 2vw;
-  font-weight: bolder;
+  font-size: 1.5vw;
+  font-weight: 1000;
   padding-left: 3vw;
-  padding-top: 1vh;
+  /*padding-top: 1vh;*/
 }
 
 .main_search_result_grid {
   width: 100%;
-  height: 30vw;
+  height: 32vw;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 50% 50%;
@@ -201,43 +198,31 @@ html {
 .main_result_accommodation_thumbnail_1 {
   grid-column: 1 / 1;
   grid-row: 1 / 2;
-  /*grid-row: 1 / 5;*/
 }
 
 .main_result_accommodation_thumbnail_2 {
   grid-column: 2 / 2;
   grid-row: 1 / 2;
-  /*grid-row: 1 / 5;*/
 }
 
 .main_result_accommodation_thumbnail_3 {
   grid-column: 3 / 3;
   grid-row: 1 / 2;
-  /*grid-row: 1 / 5;*/
 }
 
 .main_result_accommodation_thumbnail_4 {
   grid-column: 1 / 1;
   grid-row: 2 / 3;
-  /*grid-row: 5 / 9;*/
 }
 
 .main_result_accommodation_thumbnail_5 {
   grid-column: 2 / 2;
   grid-row: 2 / 3;
-  /*grid-row: 5 / 9;*/
 }
 
 .main_result_accommodation_thumbnail_6 {
   grid-column: 3 / 3;
   grid-row: 2 / 2;
-  /*grid-row: 5 / 9;*/
-}
-
-.main_search_result a {
-  text-decoration: none;
-  margin-left: 1em;
-  font-size: 11px;
 }
 
 .search_result_show_more,
@@ -245,12 +230,14 @@ html {
   width: 100%;
   font-weight: bold;
   color: black;
-  margin-bottom: 1vh;
-  padding-left: 3vw;
+  margin-bottom: 2vw;
+  padding-left: 3.5vw;
+  font-size: 1vw;
+  text-decoration: none;
 }
 
 .main_result_accommodation_img {
-  border-radius: 2vw 2vw 0 0;
+  border-radius: 1vw 1vw 0 0;
   height: 60%;
   width: 96%;
   margin: 2% 2% 0% 2%;
@@ -260,10 +247,10 @@ html {
 .main_result_accommodation_name {
   height: 12%;
   width: 96%;
-  font-size: 1vw;
-  font-weight: bold;
+  font-size: 1.2vw;
+  font-weight: bolder;
+  margin-top: 0.2vw;
   margin-left: 1vw;
-  padding-top: 0.5vw;
 }
 
 .main_result_accommodation_pricing {
@@ -294,28 +281,35 @@ html {
 .most_wanted_search_result {
   width: 100%;
   background-color: #f2f2f2;
-  border-radius: 2vw;
+  border-radius: 1vw;
   flex: 1;
   flex-wrap: wrap;
   align-items: flex-start;
 }
 
+.most_wanted_search_result_label_container {
+  display: flex;
+  align-items: center;
+  padding-right: 2.8vw;
+}
+
 .most_wanted_search_result_grid {
   width: 84%;
-  height: 33vw;
   display: grid;
   grid-template-columns: 100%;
-  grid-template-rows: 33.3% 33.3% 33.3%;
-  /*grid-template-rows: 1fr 1fr 1fr;*/
+  /*grid-template-rows: 33.3% 33.3% 33.3%;*/
   /*Does not work as expected (will give different sized fractions) used percentage method instead*/
-  margin: 12% 8% 8% 8%;
+  /*tester virer la height pour 1FR*/
+  grid-template-rows: 1fr 1fr 1fr;
+  margin: 0% 8% 0% 8%;
 }
 
 .most_wanted_accommodation_thumbnail_generic {
   width: 100%;
+  height: 10vw;
   background-color: white;
-  border-radius: 2vw;
-  margin-bottom: 2vw;
+  border-radius: 1vw;
+  margin-bottom: 1vw;
   display: flex;
   flex-direction: row;
 }
@@ -336,9 +330,9 @@ html {
 }
 
 .most_wanted_accommodation_img {
-  border-radius: 2vw 0 0 2vw;
+  border-radius: 1vw 0 0 1vw;
   height: 96%;
-  width: 30%;
+  width: 40%;
   margin: 0.2vw;
   object-fit: cover; /*To avoid stretching and maintain aspect ratio*/
 }
@@ -349,12 +343,14 @@ html {
 }
 
 .most_wanted_accommodation_name {
-  height: 20%;
+  height: 50%;
   width: 100%;
-  font-size: 1vw;
-  font-weight: bold;
+  font-size: 1.2vw;
+  font-weight: 1000;
   margin-left: 1vw;
-  padding-top: 0.5vw;
+  padding-right: 2vw;
+  padding-top: 0.8vw;
+  box-sizing: border-box;
 }
 
 .most_wanted_accommodation_pricing {
@@ -375,61 +371,99 @@ html {
 /*Activities*/
 
 .search_result_related_activities {
-  min-height: 15vh;
+  height: 40vw;
   width: 90%;
   display: grid;
   grid-template-columns: 25% 25% 25% 25%;
   grid-template-rows: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
   grid-column-gap: 3.33%;
-  margin-bottom: 1em;
+  margin-bottom: 5vw;
 }
 
-.related_activity_thumbnail_1 {
+.related_activity_grid_element_generic {
+  height: 100%;
+  width: 96%;
+  box-sizing: border-box;
+  object-fit: cover; /*To avoid stretching and maintain aspect ratio*/
+  font-size: 1vw;
+  font-weight: bolder;
+  margin: 2% 2% 2% 2%;
+}
+
+.related_activity_img_generic {
+  border-radius: 1vw 1vw 1.1vw 1.1vw;
+  box-shadow: 0vw 0vw 0.4vw 0.3vw #f2f2f2;
+}
+
+.related_activity_name_generic {
+  border-radius: 0 0 1vw 1vw;
+  padding: 1.2vw 1vw;
+  background: white;
+}
+
+/*Positionning the activities on the grid*/
+/*Positionning images*/
+
+.related_activity_img_1 {
   grid-column: 1 / 1;
   grid-row: 1 / 11;
-  box-shadow: 5px 5px 5px 5px #f2f2f2;
-  border-radius: 2em;
-  height: 100%;
 }
 
-.related_activity_thumbnail_2 {
+.related_activity_img_2 {
   grid-column: 2 / 2;
   grid-row: 1 / 6;
-  box-shadow: 5px 5px 5px 5px #f2f2f2;
-  border-radius: 2em;
-  height: 100%;
 }
 
-.related_activity_thumbnail_3 {
+.related_activity_img_3 {
   grid-column: 2 / 2;
   grid-row: 7 / 11;
-  box-shadow: 5px 5px 5px 5px #f2f2f2;
-  border-radius: 2em;
-  height: 100%;
 }
 
-.related_activity_thumbnail_4 {
+.related_activity_img_4 {
   grid-column: 3 / 3;
   grid-row: 1 / 11;
-  box-shadow: 5px 5px 5px 5px #f2f2f2;
-  border-radius: 2em;
-  height: 100%;
 }
 
-.related_activity_thumbnail_5 {
+.related_activity_img_5 {
   grid-column: 4 / 4;
-  grid-row: 1 / 5;
-  box-shadow: 5px 5px 5px 5px #f2f2f2;
-  border-radius: 2em;
-  height: 100%;
+  grid-row: 1 / 4;
 }
 
-.related_activity_thumbnail_6 {
+.related_activity_img_6 {
   grid-column: 4 / 4;
   grid-row: 5 / 11;
-  box-shadow: 5px 5px 5px 5px #f2f2f2;
-  border-radius: 2em;
-  height: 100%;
+}
+
+/*Positionning labels*/
+
+.related_activity_name_1 {
+  grid-column: 1 / 1;
+  grid-row: 10 / 11;
+}
+
+.related_activity_name_2 {
+  grid-column: 2 / 2;
+  grid-row: 5 / 6;
+}
+
+.related_activity_name_3 {
+  grid-column: 2 / 2;
+  grid-row: 10 / 11;
+}
+
+.related_activity_name_4 {
+  grid-column: 3 / 3;
+  grid-row: 10 / 11;
+}
+
+.related_activity_name_5 {
+  grid-column: 4 / 4;
+  grid-row: 3 / 4;
+}
+
+.related_activity_name_6 {
+  grid-column: 4 / 4;
+  grid-row: 10 / 11;
 }
 
 /*footer*/
